--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -4,6 +4,8 @@ html
     title
       | PaidStudies.me
     = csrf_meta_tags
+    = stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Fanwood+Text|Quattrocento', media: 'all', 'data-turbolinks-track': 'reload'
+
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
